// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hora-wasm > BruteForceIndex - creates an index and searches over it using angular 1`] = `
Uint32Array [
  153,
  773,
  561,
  389,
  882,
  345,
  51,
  679,
  266,
  734,
]
`;

exports[`hora-wasm > BruteForceIndex - creates an index and searches over it using dot_product 1`] = `
Uint32Array [
  561,
  153,
  57,
  168,
  553,
  574,
  873,
  768,
  961,
  373,
]
`;

exports[`hora-wasm > BruteForceIndex - creates an index and searches over it using euclidean 1`] = `
Uint32Array [
  773,
  153,
  389,
  345,
  882,
  561,
  679,
  266,
  734,
  699,
]
`;

exports[`hora-wasm > BruteForceIndex - creates an index and searches over it using manhattan 1`] = `
Uint32Array [
  773,
  153,
  345,
  628,
  882,
  98,
  389,
  246,
  266,
  561,
]
`;

exports[`hora-wasm > HNSWIndex - creates an index and searches over it using angular 1`] = `
Uint32Array [
  843,
  71,
  419,
  416,
  883,
  582,
  686,
  818,
  58,
  168,
]
`;

exports[`hora-wasm > HNSWIndex - creates an index and searches over it using dot_product 1`] = `
Uint32Array [
  686,
  611,
  843,
  872,
  419,
  968,
  567,
  144,
  883,
  105,
]
`;

exports[`hora-wasm > HNSWIndex - creates an index and searches over it using euclidean 1`] = `
Uint32Array [
  843,
  71,
  582,
  416,
  419,
  918,
  58,
  196,
  28,
  273,
]
`;

exports[`hora-wasm > HNSWIndex - creates an index and searches over it using manhattan 1`] = `
Uint32Array [
  71,
  843,
  196,
  656,
  582,
  936,
  273,
  416,
  378,
  419,
]
`;
